Fixed markers not showing

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -52,7 +52,7 @@
   justify-content: space-evenly;
 }
 
-.marker {
+.mapboxgl-marker {
   background-image: url(../../assets/icon/favicon.png);
   background-size: cover;
   width: 50px;
